avoid overlapping other UI elements

--- a/core/src/main/webapp/styles/back-to-top.css
+++ b/core/src/main/webapp/styles/back-to-top.css
@@ -6,8 +6,8 @@
 	text-align: center;
 	border-radius: 10px;
 	position: fixed;
-	bottom: 30px;
-	right: 30px;
+	bottom: 6px;
+	right: 6px;
 	transition: background-color .3s,
 	opacity .5s, visibility .5s;
 	opacity: 0;
